--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
     
     <link href="style/main.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -13,91 +17,94 @@
 <body>
     <div class="container">
 
-        <main>
-            <h6>Date</h6>
-            <h6>City Name</h6>
-            <img src="https://placehold.jp/150x150.png">
-            <h1>10°c</h1>
-            <h5>Weather Description</h5>
-        </main>
+        <div class="weatherApp">
 
-        <section>
-            <ul>
-                <div class="row">
-                    <div class="col-4">
-                        <li>
-                            <img src="https://placehold.jp/25x25.png" alt="icon">
-                            <span>5Km/hr</span>
-                            <p>Wind</p>
-                        </li>
-                    </div>
-                    <div class="col-4">
-                        <li>
-                            <img src="https://placehold.jp/25x25.png" alt="icon">
-                            <span>8%</span>
-                            <p>Precipitation</p>
-                        </li>
-                    </div>
-                    <div class="col-4">
-                        <li>
-                            <img src="https://placehold.jp/25x25.png" alt="icon">
-                            <span>20%</span>
-                            <p>Humidity</p>
-                        </li> 
-                    </div>   
-                </div>
-            </ul>
-        </section>
+            <main>
+                <h6>Date</h6>
+                <h6>City Name</h6>
+                <img src="https://placehold.jp/150x150.png">
+                <h1>10°c</h1>
+                <h5>Weather Description</h5>
+            </main>
 
-        <section>
-            <ul>
-                <div class="row">
-                    <div class="col-2">
-                        <li>
-                            <p>Mon</p>
-                            <img src="https://placehold.jp/25x25.png" alt="icon">
-                            <span>10° / 20°</span>
-                        </li>
+            <section class="details">
+                <ul>
+                    <div class="row">
+                        <div class="col-4">
+                            <li>
+                                <img src="https://placehold.jp/25x25.png" alt="icon">
+                                <span>5Km/hr</span>
+                                <p>Wind</p>
+                            </li>
+                        </div>
+                        <div class="col-4">
+                            <li>
+                                <img src="https://placehold.jp/25x25.png" alt="icon">
+                                <span>8%</span>
+                                <p>Precipitation</p>
+                            </li>
+                        </div>
+                        <div class="col-4">
+                            <li>
+                                <img src="https://placehold.jp/25x25.png" alt="icon">
+                                <span>20%</span>
+                                <p>Humidity</p>
+                            </li> 
+                        </div>   
                     </div>
-                    <div class="col-2">
-                        <li>
-                            <p>Tue</p>
-                            <img src="https://placehold.jp/25x25.png" alt="icon">
-                            <span>10° / 20°</span>
-                        </li>
-                    </div>
-                    <div class="col-2">
-                        <li>
-                            <p>Wed</p>
-                            <img src="https://placehold.jp/25x25.png" alt="icon">
-                            <span>10° / 20°</span>
-                        </li>
-                    </div>
-                    <div class="col-2">
-                        <li>
-                            <p>Thu</p>
-                            <img src="https://placehold.jp/25x25.png" alt="icon">
-                            <span>10° / 20°</span>
-                        </li>
-                    </div>
-                    <div class="col-2">
-                        <li>
-                            <p>Fri</p>
-                            <img src="https://placehold.jp/25x25.png" alt="icon">
-                            <span>10° / 20°</span>
-                        </li>
-                    </div>
-                    <div class="col-2">
-                        <li>
-                            <p>Sat</p>
-                            <img src="https://placehold.jp/25x25.png" alt="icon">
-                            <span>10° / 20°</span>
-                        </li>
-                    </div>
-                </div>
-            </ul>
-        </section>
+                </ul>
+            </section>
 
+            <section class="forecast">
+                <ul>
+                    <div class="row">
+                        <div class="col-2">
+                            <li>
+                                <span>Day</span>
+                                <img src="https://placehold.jp/25x25.png" alt="icon">
+                                <span>10° / 20°</span>
+                            </li>
+                        </div>
+                        <div class="col-2">
+                            <li>
+                                <span>Day</span>
+                                <img src="https://placehold.jp/25x25.png" alt="icon">
+                                <span>10° / 20°</span>
+                            </li>
+                        </div>
+                        <div class="col-2">
+                            <li>
+                                <span>Day</span>
+                                <img src="https://placehold.jp/25x25.png" alt="icon">
+                                <span>10° / 20°</span>
+                            </li>
+                        </div>
+                        <div class="col-2">
+                            <li>
+                                <span>Day</span>
+                                <img src="https://placehold.jp/25x25.png" alt="icon">
+                                <span>10° / 20°</span>
+                            </li>
+                        </div>
+                        <div class="col-2">
+                            <li>
+                                <span>Day</span>
+                                <img src="https://placehold.jp/25x25.png" alt="icon">
+                                <span>10° / 20°</span>
+                            </li>
+                        </div>
+                        <div class="col-2">
+                            <li>
+                                <span>Day</span>
+                                <img src="https://placehold.jp/25x25.png" alt="icon">
+                                <span>10° / 20°</span>
+                            </li>
+                        </div>
+                    </div>
+                </ul>
+            </section>
+
+        </div>
 
     </div>
 
