Added slider ball

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
 
         <div class="weatherApp">
 
+            <div class="slider">
+                <input type="checkbox" id="units" class="toggle">
+                <label for="units" class="label">
+                    <div class="ball">
+                    </div>
+            </div>
+
             <main>
                 <h6>Date</h6>
                 <h6>City Name</h6>
