--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
+
+<script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
     
     <link href="style/main.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -27,11 +29,12 @@
             </div>
 
             <main>
-                <h6>Date</h6>
-                <h6>City Name</h6>
+                <h6 id="currentDate">Date</h6>
+                <h6 id="cityName"></h6>
                 <img src="https://placehold.jp/150x150.png">
-                <h1>10°c</h1>
-                <h5>Weather Description</h5>
+                <h1 id="currentTemp"></h1>
+                <h5 id="description"></h5>
+                <h4 id="feelsLike"></h4>
             </main>
 
             <section class="details">
@@ -40,21 +43,21 @@
                         <div class="col-4">
                             <li>
                                 <img src="https://placehold.jp/25x25.png" alt="icon">
-                                <span>5Km/hr</span>
+                                <span id="wind"></span> <span>km/hr</span>
                                 <p>Wind</p>
                             </li>
                         </div>
                         <div class="col-4">
                             <li>
                                 <img src="https://placehold.jp/25x25.png" alt="icon">
-                                <span>8%</span>
+                                <span id="precip">8%</span>
                                 <p>Precipitation</p>
                             </li>
                         </div>
                         <div class="col-4">
                             <li>
                                 <img src="https://placehold.jp/25x25.png" alt="icon">
-                                <span>20%</span>
+                                <span id="humid"></span> <span>%</span>
                                 <p>Humidity</p>
                             </li> 
                         </div>   
@@ -115,6 +118,6 @@
 
     </div>
 
-    <script>src="js/main.js"</script>
+    <script src="js/main.js"></script>
 </body>
 </html>
