--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <main>
                 <h6 id="currentDate">Date</h6>
                 <h6 id="cityName"></h6>
-                <img src="https://placehold.jp/150x150.png">
+                <img src="" alt="" id="icon">
                 <h1 id="currentTemp"></h1>
                 <h5 id="description"></h5>
                 <h4 id="feelsLike"></h4>
