Removed slider ball - replaced with C/F links

--- a/index.html
+++ b/index.html
@@ -32,13 +32,18 @@
                 <div class="col-5">
                 </div>
 
-                <div class="col-1">
-                    <div class="slider">
-                        <input type="checkbox" id="units" class="toggle">
-                        <label for="units" class="label">
-                            <div class="ball">
-                    </div>
+                <div class="col-2">
+                    <span> <a href="#" id="cel">C</a> | <a href="#" id="far"> F </a> </span>
                 </div>
+
+                <!--<div class="col-1">
+                <!--    <div class="slider">
+                <!--        <input type="checkbox" id="units" class="toggle">
+                <!--        <label for="units" class="label">
+                <!--            <div class="ball">
+                <!--    </div>
+                <!--</div>
+                -->
             </div>
         
 
