--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                 </div>
 
                 <div class="col-2">
-                    <span> <a href="#" id="cel">C</a> | <a href="#" id="far"> F </a> </span>
+                    <span> <a href="#" id="cel">C</a> | 
+                        <a href="#" id="far"> F </a> </span>
                 </div>
 
                 <!--<div class="col-1">
