added toggle to cel/far links removed precipitation

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
 
             <div class="col-2">
-                <a href="#" id="cel">C</a>
+                <a href="#" id="cel" class="active">C</a>
                 <span> | </span>
                 <a href="#" id="far">F</a>
             </div>
@@ -56,7 +56,7 @@
         <section class="details">
                 <ul>
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-4">
                         </div>
                         <div class="col-2">
                             <li>
@@ -65,6 +65,7 @@
                                 <p>Wind</p>
                             </li>
                         </div>
+                        <!--
                         <div class="col-2">
                             <li>
                                 <i class="fa-solid fa-umbrella"></i>
@@ -72,6 +73,7 @@
                                 <p>Precipitation</p>
                             </li>
                         </div>
+                        -->
                         <div class="col-2">
                             <li>
                                 <i class="fa-solid fa-droplet"></i>
@@ -79,7 +81,7 @@
                                 <p>Humidity</p>
                             </li>
                         </div>
-                        <div class="col-3">
+                        <div class="col-4">
                         </div>
                      </div>
                 </ul>
