added github link

--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
 </head>
 
 <body>
+    <div class="outerContainer">
     <div class="container">
 
         <div class="row">
             <div class="col-4">
                 <form id="citySearch">
                     <input id="cityInput" type="search" placeholder="Enter a city">
-                    <input type="submit" value="search">
+                    <input type="submit" value="search" class="button">
                 </form>
             </div>
 
@@ -136,10 +137,11 @@
                 </div>
             </ul>
         </section>
+        -->
 
     </div>
--->
-
+    <a href="https://github.com/Melissa1825/Weather-App" target="_blank">Open source code</a> <span>by Melissa</span>
+    </div>
     <!--JS Link-->
     <script src="js/main.js"></script>
 
